--- a/index.html
+++ b/index.html
@@ -1656,11 +1656,11 @@
                 <li><strong>Añadir Tareas:</strong> Escribe tu tarea en el campo inferior y pulsa el botón <i class="fas fa-plus"></i> o la tecla "Enter".</li>
                 <li><strong>Marcar como Completada:</strong> Haz clic en el círculo a la izquierda de la tarea. ¡Ganas una medalla <i class="fas fa-medal"></i> por cada tarea completada en el día!</li>
                 <li><strong>Prioridad:</strong> Haz clic en el cuadrado de color junto al círculo para cambiar la prioridad de la tarea (Rojo: Urgente &gt; Naranja: Alta &gt; Amarillo: No Olvidar &gt; Verde: Puede Esperar &gt; Gris: Sin prioridad).</li>
-                <li><strong>Agendar en Google Calendar:</strong> Haz clic en el icono de calendario <i class="far fa-calendar-plus"></i> para que se abra una plantilla de Google Calendar con los detalles de la tarea. Introduce la fecha/hora deseada y guarda el evento en tu calendario. Esta opción está deshabilitada para tareas completadas.</li>
+                <li><strong>Agendar en Google Calendar:</strong> Haz clic en el icono de calendario <i class="far fa-calendar-plus"></i> para que se abra Google Calendar con los detalles de la tarea. Introduce la fecha/hora deseada y guarda el evento en tu calendario.</li>
                 <li><strong>Enlaces:</strong> Haz clic en el icono de enlace <i class="fas fa-link"></i> para añadir o abrir un enlace web asociado a la tarea.</li>
                 <li><strong>Sub-Tareas:</strong>
                     <ul>
-                        <li>Pulsa el botón <i class="fas fa-plus"></i> (pequeño, a la derecha de la tarea principal, debajo de la barra de progreso) para mostrar el campo y añadir sub-tareas.</li>
+                        <li>Pulsa el botón <i class="fas fa-plus"></i> (pequeño, a la derecha de la tarea principal, debajo de la barra de progreso) para añadir sub-tareas.</li>
                         <li>Una vez añadida una sub-tarea, el campo de texto se ocultará. Pulsa el botón <i class="fas fa-plus"></i> de nuevo si deseas añadir más.</li>
                         <li>Las sub-tareas tienen su propio círculo para marcarlas como completadas, botones para moverlas <i class="fas fa-arrow-up"></i><i class="fas fa-arrow-down"></i>, o eliminarlas <i class="fas fa-trash-alt"></i>.</li>
                     </ul>
@@ -1669,7 +1669,7 @@
                 <li><strong>Reordenar Tareas:</strong> Pulsa el botón de reordenar <i class="fas fa-sort-amount-down-alt"></i> para organizar automáticamente todas las tareas por prioridad (de más a menos urgente) y luego por fecha (las más antiguas primero, si tienen).</li>
                 <li><strong>Modo Oscuro/Claro:</strong> Utiliza el botón <i class="fas fa-moon"></i> / <i class="fas fa-sun"></i> situado abajo a la derecha para cambiar el tema visual de la aplicación (oscuro por defecto).</li>
                 <li><strong>Eliminar Tareas:</strong> Haz clic en el icono de papelera <i class="fas fa-trash-alt"></i> para eliminar tareas principales o sub-tareas.</li>
-                <li><strong>Anotaciones Rápidas:</strong> Utiliza el área debajo de la leyenda para notas temporales. Puedes borrarlas con el botón "Borrar".</li>
+                <li><strong>Anotaciones Rápidas:</strong> Utiliza el área para notas temporales.</li>
                 <li><strong>Exportar/Importar Datos:</strong> Usa los botones "Exportar Local" e "Importar Local" para guardar/restaurar datos desde un archivo en tu dispositivo. Usa "Exportar a Drive" e "Importar de Drive" para usar tu Google Drive. <strong>¡Atención!</strong> Importar reemplazará los datos actuales.</li>
             </ol>
         </div>
