--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     <!-- Si ToDayList-192.png es el que quieres para Apple Touch, puedes añadir: -->
     <!-- <link rel="apple-touch-icon" href="/ToDayList-192.png"> -->
     <!-- Si no, los dispositivos Apple intentarán usar el favicon general o el más grande que encuentren -->
-
+    
+    <link rel="manifest" href="/manifest.json">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
