--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://www.todaylist.es/">
     <meta property="og:title" content="ToDayList - Simplifica Tu Día, Organiza Tus Tareas">
     <meta property="og:description" content="Organiza tus pendientes con ToDayList: tu gestor de tareas diarias minimalista con integración de Google Drive y Calendar.">
-    <meta property="og:image" content="/Logo.png"> <!-- Imagen principal para OG, CAMBIADO a Logo.png -->
+    <meta property="og:image" content="https://www.todaylist.es/ToDayList.png"> <!-- Imagen principal para OG, podría ser ToDayList-512.png -->
     <meta property="og:site_name" content="ToDayList">
 
     <!-- Twitter -->
@@ -24,7 +24,7 @@
     <meta property="twitter:url" content="https://www.todaylist.es/">
     <meta property="twitter:title" content="ToDayList - Simplifica Tu Día, Organiza Tus Tareas">
     <meta property="twitter:description" content="Organiza tus pendientes con ToDayList: tu gestor de tareas diarias minimalista con integración de Google Drive y Calendar.">
-    <meta property="twitter:image" content="/Logo.png"> <!-- Imagen principal para Twitter, CAMBIADO a Logo.png -->
+    <meta property="twitter:image" content="https://www.todaylist.es/ToDayList.png"> <!-- Imagen principal para Twitter -->
 
     <!-- Favicons -->
     <link rel="icon" href="/favicon-96x96.png" type="image/png" sizes="96x96"> <!-- Para Google Search y navegadores modernos -->
@@ -52,7 +52,7 @@
       "name": "ToDayList - Simplifica Tu Día, Organiza Tus Tareas",
       "description": "ToDayList es tu gestor de tareas diarias minimalista y eficiente. Organiza tus pendientes, establece prioridades, añade subtareas y fechas límite. Con integración para agendar en Google Calendar y sincronización de datos con Google Drive. ¡Mejora tu productividad hoy!",
       "url": "https://www.todaylist.es/",
-      "primaryImageOfPage": "/Logo.png", <!-- CAMBIADO a Logo.png -->
+      "primaryImageOfPage": "https://www.todaylist.es/ToDayList.png",
       "mentions": [
         {
           "@type": "SoftwareApplication",
@@ -72,7 +72,7 @@
             "availability": "https://schema.org/OnlineOnly"
           },
           "image": [
-             "/Logo.png", <!-- CAMBIADO a Logo.png -->
+             "https://www.todaylist.es/ToDayList.png",
              "https://www.todaylist.es/favicon-96x96.png",
              "https://www.todaylist.es/favicon.svg"
           ],
@@ -1518,7 +1518,7 @@
         </p>
 
         <section id="welcome-section" class="hidden">
-            <img src="/Logo.png" alt="Logo ToDayList" class="welcome-icon"> <!-- CAMBIADO a Logo.png -->
+            <img src="https://www.todaylist.es/ToDayList.png" alt="ToDayList Icono" class="welcome-icon">
             <h2>¡Bienvenido a ToDayList!</h2>
             <p>
                 ToDayList es más que una simple lista de tareas. Es una aplicación web diseñada para ayudarte
@@ -1630,7 +1630,7 @@
     </div>
 
     <footer>
-        <img src="/Logo.png" alt="Logo ToDayList" class="footer-logo"> <!-- CAMBIADO a Logo.png -->
+        <img src="https://www.todaylist.es/ToDayList.png" alt="Logo ToDayList" class="footer-logo">
         <p class="footer-text">WebApp creada por Henry Gil</p>
 
         <div id="support-section-footer">
