--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
-    <!-- Código Schema.org mejorado -->
+     <!-- Código Schema.org para SEO -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -53,37 +53,35 @@
       "description": "ToDayList es tu gestor de tareas diarias minimalista y eficiente. Organiza tus pendientes, establece prioridades, añade subtareas y fechas límite. Con integración para agendar en Google Calendar y sincronización de datos con Google Drive. ¡Mejora tu productividad hoy!",
       "url": "https://www.todaylist.es/",
       "primaryImageOfPage": "https://www.todaylist.es/ToDayList.png",
-      "mentions": [
-        {
-          "@type": "SoftwareApplication",
-          "name": "ToDayList",
-          "applicationCategory": "https://schema.org/ProductivityApplication",
-          "operatingSystem": "Web Browser",
-          "description": "ToDayList es un gestor de tareas diarias minimalista y eficiente que te ayuda a organizar tus pendientes, establecer prioridades, añadir subtareas, agendar en Google Calendar y sincronizar con Google Drive. Ideal para simplificar y organizar tus tareas diarias y aumentar tu productividad.",
-          "url": "https://www.todaylist.es/",
-          "author": {
-            "@type": "Person",
-            "name": "Enrique Gil"
-          },
-          "offers": {
-            "@type": "Offer",
-            "price": "0",
-            "priceCurrency": "USD",
-            "availability": "https://schema.org/OnlineOnly"
-          },
-          "image": [
-             "https://www.todaylist.es/ToDayList.png",
-             "https://www.todaylist.es/favicon-96x96.png",
-             "https://www.todaylist.es/favicon.svg"
-          ],
-          "softwareVersion": "1.1.0",
-          "datePublished": "2024-03-15",
-          "keywords": "lista de tareas, to-do list, gestor de tareas diarias, organizador personal, productividad, planificación diaria, tareas pendientes, subtareas, prioridades, web app, task management, daily planner, online organizer, google drive sync, google calendar integration, free app"
-        }
-      ]
+      "mainEntity": {
+        "@type": "SoftwareApplication",
+        "name": "ToDayList",
+        "applicationCategory": "https://schema.org/ProductivityApplication",
+        "operatingSystem": "Web Browser",
+        "description": "ToDayList es un gestor de tareas diarias minimalista y eficiente que te ayuda a organizar tus pendientes, establecer prioridades, añadir subtareas, agendar en Google Calendar y sincronizar con Google Drive. Ideal para simplificar y organizar tus tareas diarias y aumentar tu productividad.",
+        "url": "https://www.todaylist.es/",
+        "author": {
+          "@type": "Person",
+          "name": "Enrique Gil"
+        },
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD",
+          "availability": "https://schema.org/OnlineOnly"
+        },
+        "image": [
+           "https://www.todaylist.es/ToDayList.png",
+           "https://www.todaylist.es/favicon-96x96.png",
+           "https://www.todaylist.es/favicon.svg"
+        ],
+        "softwareVersion": "1.1.0",
+        "datePublished": "2024-03-15",
+        "keywords": "lista de tareas, to-do list, gestor de tareas diarias, organizador personal, productividad, planificación diaria, tareas pendientes, subtareas, prioridades, web app, task management, daily planner, online organizer, google drive sync, google calendar integration, free app"
+      }
     }
     </script>
-    <!-- Fin Código Schema.org mejorado -->
+    <!-- Fin Código Schema.org -->
 
     <style>
         :root {
