--- a/index.html
+++ b/index.html
@@ -279,7 +279,8 @@
             font-weight: 300;
             color: var(--app-description-color);
             margin-top: 0;
-            margin-bottom: 20px;
+            /* MODIFIED: Increased space after this paragraph */
+            margin-bottom: 40px; /* Increased from 20px */
             line-height: 1.5;
             max-width: 90%;
             margin-left: auto;
@@ -312,8 +313,13 @@
         #welcome-section p {
             font-size: 0.95rem;
             color: var(--text-color);
-            margin-bottom: 15px;
+            /* MODIFIED: Increased space after this paragraph */
+            margin-bottom: 30px; /* Increased from 15px */
             line-height: 1.6;
+            /* Ensure the first paragraph has this margin */
+            &:first-of-type {
+                 margin-bottom: 30px; /* Apply specifically to the first p */
+            }
         }
         #welcome-section ul {
             list-style: none;
@@ -1220,6 +1226,8 @@
             }
             .app-description-static {
                 font-size: 0.85rem;
+                /* MODIFIED: Keep increased margin for mobile too */
+                margin-bottom: 40px;
             }
             #info-button {
                 font-size: 1.2rem;
@@ -1263,6 +1271,11 @@
              }
              #welcome-section p {
                  font-size: 0.9rem;
+                 /* MODIFIED: Keep increased margin for mobile too */
+                 margin-bottom: 30px;
+                 &:first-of-type {
+                     margin-bottom: 30px;
+                 }
              }
              #welcome-section ul li {
                  font-size: 0.85rem;
@@ -2177,7 +2190,7 @@
                  const day = String(dateObj.getDate()).padStart(2, '0');
                  const hours = String(dateObj.getHours()).padStart(2, '0');
                  const minutes = String(dateObj.getMinutes()).padStart(2, '0');
-                 const seconds = String(dateObj.getSeconds()).padStart(2, '0');
+                 const seconds = String(dateObj.getSeconds()).padStart(dateObj.getSeconds() === 0 ? 2 : 0, '0'); // Pad seconds only if 0
 
                 // For the template URL, YYMMDDTHHMMSS or YYYYMMDDTHHMMSSZ (for UTC) are common formats.
                 // Let's use YYYYMMDDTHHMMSS for local time as it's simpler with template.
