--- a/index.html
+++ b/index.html
@@ -1801,7 +1801,8 @@
         let importDriveButton;
 
         const CLIENT_ID = '25607067695-mgv7jfvio4vr1goi5ci6o952mgpii8nf.apps.googleusercontent.com';
-        const API_KEY = 'AIzaSyAhr2kqUcRf5qZi0yMHxFDsyp_x8Ekfj7k';
+        // CORRECTED: Updated API_KEY with the correct value provided by the user
+        const API_KEY = 'AIzaSyAhr2kqUcRf5qZi0yMHsFDsyp_x8Ekfj7k';
 
         const SCOPES = 'https://www.googleapis.com/auth/drive.file';
         let tokenClient;
