--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
         :root {
             /* CAMBIO SOLICITADO 1: Fondo gris crema para modo dia */
-            --bg-color: #cccccc; /* Gris crema */
+            --bg-color: #d4ccbc; /* Gris crema */
             --text-color: #333;
             --heading-color: #222;
             --item-bg: #ffffff;
